<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a31d21"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="283dp"
                android:layout_gravity="center"
                android:contentDescription="@string/pico_playing_music"
                app:srcCompat="@drawable/picomusique" />

            <TextView
                android:id="@+id/textViewTeaser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/question"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_play" />

            <TextView
                android:id="@+id/textViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/which_note_was_that"
                android:textColor="#ffffff"
                android:textSize="18sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="176dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">

                    <Button
                        android:id="@+id/buttonA"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/a_la" />

                    <Button
                        android:id="@+id/buttonAd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/a_la_diese" />

                    <Button
                        android:id="@+id/buttonB"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/b_si" />

                    <Button
                        android:id="@+id/buttonC"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_horizontal"
                        android:text="@string/c_do" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonCd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/c_do_diese" />

                    <Button
                        android:id="@+id/buttonD"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/d_r" />

                    <Button
                        android:id="@+id/buttonDd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/d_r_diese" />

                    <Button
                        android:id="@+id/buttonE"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/e_mi" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonF"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/f_fa" />

                    <Button
                        android:id="@+id/buttonFd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/f_fa_diese" />

                    <Button
                        android:id="@+id/buttonG"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/g_sol" />

                    <Button
                        android:id="@+id/buttonGd"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/g_sol_diese" />

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/textViewScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score_0_20"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
